--- a/index.html
+++ b/index.html
@@ -4,31 +4,27 @@
 	<head>
 		<title>Code Quiz</title>
 		<meta charset="UTF-8">
+
+		<!-- Custom CSS -->
 		<link href="style.css" rel="stylesheet" type="text/css">
-        <script src ="game.js" type="text/javascript"></script>
+
+		<!-- JavaScript-->
+		<script src ="game.js" type="text/javascript"></script>
+		
+		<!-- jQuery -->
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+		<!-- Bootstrap CSS -->
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	</head>
 	<body>
-		<div id="nav">
-			<!-- view scores link on the top left of nav bar-->
-			<div class="left">
-                <a onclick="getScore()" href="#"><h4 >View Highscore</h4></a>
-			</div>
-			<!-- countdown timer on the top right of nav bar-->
-			<div class="right">
-				<h4>Time: <span id="timeLeft">0</span></h4>
-			</div>
-		</div>
-		<!--main body of quiz-->
-		<div id="quiz">
-            <div id="quizBody">      
-                <h1>   
-                    JavaScript Quiz!
-                </h1>
-                <h3>
-					Click to play!   
-                </h3>
-                <button onclick="start()">Start!</button>
-            </div>
-        </div>
-	</body>
+
+    <div class="container">
+      <div id="home" class="flex-center flex-column">
+        <h1>Coding Quiz</h1>
+        <a class="btn" href="/game.html">Play</a>
+        <a class="btn" href="/highscores.html">High Scores</a>
+      </div>
+    </div>
+  </body>
 </html>
