--- a/highscores.html
+++ b/highscores.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quiz - High Scores</title>
+    <title>High Scores</title>
     <link rel="stylesheet" href="assets/css/app.css" />
     <link rel="stylesheet" href="assets/css/highscores.css" />
   </head>
   <body>
     <div class="container">
-      <div id="highscores" class="flex-center flex-column">
+      <div id="highScores" class="flex-center flex-column">
         <h1 id="finalScore">High Scores</h1>
         <ul id="highScoresList"></ul>
-        <a class="btn" href="index.html">Go Home</a>
+        <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="assets/js/highscores.js"></script>
+    <script src="highscores.js"></script>
   </body>
 </html>
