--- a/highscores.html
+++ b/highscores.html
@@ -13,9 +13,9 @@
       <div id="highScores" class="flex-center flex-column">
         <h1 id="finalScore">High Scores</h1>
         <ul id="highScoresList"></ul>
-        <a class="btn" href="/">Go Home</a>
-      </div>
+        <a class="btn" href="index.html">Go Home</a>
     </div>
-    <script src="highscores.js"></script>
-  </body>
+  </div>
+  <script src="assets/js/highscores.js"></script>
+</body>
 </html>
